create custom dir instead of shared vagrant dir

--- a/scripts/etc/init/solr.conf
+++ b/scripts/etc/init/solr.conf
@@ -11,7 +11,7 @@ kill timeout 30
 respawn
 
 script
-    export JETTY_HOME=/vagrant/solr/example
-    chdir /vagrant/solr/example
-    exec java -jar /vagrant/solr/example/start.jar
+    export JETTY_HOME=/home/vagrant/solr/example
+    chdir /home/vagrant/solr/example
+    exec java -jar /home/vagrant/solr/example/start.jar
 end script
