run as solr cloud

--- a/scripts/etc/init/solr.conf
+++ b/scripts/etc/init/solr.conf
@@ -13,5 +13,5 @@ respawn
 script
     export JETTY_HOME=/home/vagrant/solr/example
     chdir /home/vagrant/solr/example
-    exec java -jar /home/vagrant/solr/example/start.jar
+    exec java -jar -Dbootstrap_confdir=./solr/collection1/conf -Dcollection.configName=myconf -DzkRun -DnumShards=2 /home/vagrant/solr/example/start.jar
 end script
