--- a/scripts/etc/init/zk_solr.conf
+++ b/scripts/etc/init/zk_solr.conf
@@ -13,5 +13,5 @@ respawn
 script
     export JETTY_HOME=/home/vagrant/solr/example
     chdir /home/vagrant/solr/example
-    exec java -jar -Dhost=192.168.50.5 -DzkHost=192.168.50.4:9983 /home/vagrant/solr/example/start.jar
+    exec java -jar -Dhost=192.168.50.4 -Dbootstrap_confdir=./solr/collection1/conf -Dcollection.configName=myconf -DzkRun -DnumShards=2 /home/vagrant/solr/example/start.jar
 end script
